Updated Social URLs

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,16 +2,16 @@
 					<footer id="footer">
 						<ul class="icons">
               {{ with .Site.Params.social.github }}
-              <li><a href="https://github.com/{{ . }}" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+              <li><a href="https://github.com/{{ . }}" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
               {{ end }}
               {{ with .Site.Params.social.linkedin }}
-              <li><a href="https://www.linkedin.com/in/{{ . }}" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+              <li><a href="https://www.linkedin.com/in/{{ . }}" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
               {{ end }}
               {{ with .Site.Params.social.facebook }}
-              <li><a href="https://facebook.com/{{ . }}" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id={{ . }}" class="icon brands fa-facebook" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
               {{ end }}
               {{ with .Site.Params.social.twitter }}
-              <li><a href="https://twitter.com/{{ . }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="https://twitter.com/{{ . }}" class="icon brands fa-twitter"><span class="label" target="_blank" rel="noopener noreferrer">Twitter</span></a></li>
               {{ end }}
               {{ with .Site.Params.contact.email }}
               <li><a href="mailto:{{ . }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
